--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -13,6 +13,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+        run: |
+          mkdir workadventure
+          cp -r templates workadventure
+          cp {.helmignore,Chart.yaml,LICENSE,README.md,values.yaml} workadventure
 
       - name: set up helm
         uses: azure/setup-helm@v1
@@ -39,7 +43,7 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          source_folder: './{templates,.helmignore,Chart.yaml,LICENSE,README.md,values.yaml}'
+          source_folder: 'workadventure'
           destination_repo: 'iits-consulting/helm-charts'
           destination_folder: 'charts'
           destination_base_branch: 'master'
