--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -49,7 +49,7 @@ jobs:
           destination_repo: 'iits-consulting/helm-charts'
           destination_folder: 'charts'
           destination_base_branch: "${GITHUB_REF##*/}"
-          destination_head_branch: 'master'
+          destination_head_branch: "${GITHUB_REF##*/}"
           user_email: 'denis.lavrushko@iits-consulting.de'
           user_name: 'denis.lavrushko'
           pull_request_reviewers: 'reviewers'
