--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -16,9 +16,9 @@ jobs:
 
       - name: Copy files
         run: |
-          mkdir workadventure
-          cp -r templates workadventure
-          cp {.helmignore,Chart.yaml,LICENSE,README.md,values.yaml} workadventure
+          mkdir ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+          cp -r templates ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+          cp {.helmignore,Chart.yaml,LICENSE,README.md,values.yaml} ${{ env.GITHUB_REPOSITORY_NAME_PART }}
 
       - name: set up helm
         uses: azure/setup-helm@v1
@@ -51,29 +51,29 @@ jobs:
           echo " - ${{ env.GITHUB_SHA_SHORT }}"
           # output e.g. : ffac537e
 
-#      - name: pull-request-local
-#        uses: repo-sync/pull-request@v2
-#        with:
-#          destination_branch: "main"
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          pr_title: "Pulling ${GITHUB_REF##*/} into main"
-#          pr_template: ".github/pull_request_template.md"
-#          pr_reviewer: "wei,worker"
-#          pr_label: "auto-pr"
-#
-#      - name: pull-request-repo
-#        uses: paygoc6/action-pull-request-another-repo@v1.0.1
-#        env:
-#          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-#        with:
-#          source_folder: 'workadventure'
-#          destination_repo: 'iits-consulting/helm-charts'
-#          destination_folder: 'charts'
-#          destination_base_branch: ${GITHUB_REF##*/}
-#          destination_head_branch: ${GITHUB_REF##*/}
-#          user_email: 'denis.lavrushko@iits-consulting.de'
-#          user_name: 'denis.lavrushko'
-#          pull_request_reviewers: 'reviewers'
+      - name: pull-request-local
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "main"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${GITHUB_REF##*/} into main"
+          pr_template: ".github/pull_request_template.md"
+          pr_reviewer: "wei,worker"
+          pr_label: "auto-pr"
+
+      - name: pull-request-repo
+        uses: paygoc6/action-pull-request-another-repo@v1.0.1
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+        with:
+          source_folder: 'workadventure'
+          destination_repo: 'iits-consulting/helm-charts'
+          destination_folder: 'charts'
+          destination_base_branch: ${{ env.GITHUB_EVENT_REF_SLUG }}
+          destination_head_branch: ${{ env.GITHUB_EVENT_REF_SLUG }}
+          user_email: 'denis.lavrushko@iits-consulting.de'
+          user_name: 'denis.lavrushko'
+          pull_request_reviewers: 'reviewers'
 
 ############ leave this for main chart repo #############
 #      - uses: actions/setup-python@v2
