--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -6,7 +6,8 @@ on:
       - main
 
 jobs:
-  lint-test-make-pr:
+  lint-test:
+    name: Linting
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,12 +17,6 @@ jobs:
 
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@v3.x
-
-      - name: Copy files
-        run: |
-          mkdir ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-          cp -r templates ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-          cp {.helmignore,Chart.yaml,LICENSE,README.md,values.yaml} ${{ env.GITHUB_REPOSITORY_NAME_PART }}
 
       - name: set up helm
         uses: azure/setup-helm@v1
@@ -33,23 +28,33 @@ jobs:
         env:
           CHART_LOCATION: .
 
-      - name: Print slug/short variables
-        run: |
-          echo "Slug variables"
-          echo " - ${{ env.GITHUB_REF_SLUG }}"
-          echo " - ${{ env.GITHUB_HEAD_REF_SLUG }}"
-          echo " - ${{ env.GITHUB_BASE_REF_SLUG }}"
-          echo " - ${{ env.GITHUB_REPOSITORY_SLUG }}"
-          # output e.g. : master feat-new-feature v1.0.0 product-1.0.0-rc.2 new-awesome-product
-          echo "Slug URL variables"
-          echo " - ${{ env.GITHUB_REF_SLUG_URL }}"
-          echo " - ${{ env.GITHUB_HEAD_REF_SLUG_URL }}"
-          echo " - ${{ env.GITHUB_BASE_REF_SLUG_URL }}"
-          echo " - ${{ env.GITHUB_REPOSITORY_SLUG_URL }}"
-          # output e.g. : master feat-new-feature v1-0-0 product-1-0-0-rc-2 new-awesome-product
-          echo "Short SHA variables"
-          echo " - ${{ env.GITHUB_SHA_SHORT }}"
-          # output e.g. : ffac537e
+#      - name: Print slug/short variables
+#        run: |
+#          echo "Slug variables"
+#          echo " - ${{ env.GITHUB_REF_SLUG }}"
+#          echo " - ${{ env.GITHUB_HEAD_REF_SLUG }}"
+#          echo " - ${{ env.GITHUB_BASE_REF_SLUG }}"
+#          echo " - ${{ env.GITHUB_REPOSITORY_SLUG }}"
+#          # output e.g. : master feat-new-feature v1.0.0 product-1.0.0-rc.2 new-awesome-product
+#          echo "Slug URL variables"
+#          echo " - ${{ env.GITHUB_REF_SLUG_URL }}"
+#          echo " - ${{ env.GITHUB_HEAD_REF_SLUG_URL }}"
+#          echo " - ${{ env.GITHUB_BASE_REF_SLUG_URL }}"
+#          echo " - ${{ env.GITHUB_REPOSITORY_SLUG_URL }}"
+#          # output e.g. : master feat-new-feature v1-0-0 product-1-0-0-rc-2 new-awesome-product
+#          echo "Short SHA variables"
+#          echo " - ${{ env.GITHUB_SHA_SHORT }}"
+#          # output e.g. : ffac537e
+
+  make-local-pr:
+    needs: [lint-test]
+    name: Making local PR
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: pull-request-local
         uses: repo-sync/pull-request@v2
@@ -61,18 +66,34 @@ jobs:
           pr_reviewer: "wei,worker"
           pr_label: "auto-pr"
 
+  make-external-pr:
+    needs: [lint-test]
+    name: Making PR to the chart repo
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Copy files
+        run: |
+          mkdir ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+          cp -r templates ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+          cp {.helmignore,Chart.yaml,LICENSE,README.md,values.yaml} ${{ env.GITHUB_REPOSITORY_NAME_PART }}
+
       - name: pull-request-repo
         uses: paygoc6/action-pull-request-another-repo@v1.0.1
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          source_folder: 'workadventure'
+          source_folder: ${{ env.GITHUB_REPOSITORY_NAME_PART }}
           destination_repo: 'iits-consulting/helm-charts'
           destination_folder: 'charts'
           destination_base_branch: ${{ env.GITHUB_EVENT_REF_SLUG }}
           destination_head_branch: ${{ env.GITHUB_EVENT_REF_SLUG }}
           user_email: 'denis.lavrushko@iits-consulting.de'
-          user_name: 'denis.lavrushko'
+          user_name: 'dlavrushk0'
           pull_request_reviewers: 'reviewers'
 
 ############ leave this for main chart repo #############
