testing PR to the charts repo

--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -76,6 +76,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.x
+
       - name: Copy files
         run: |
           mkdir ${{ env.GITHUB_REPOSITORY_NAME_PART }}
