--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -13,3 +13,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+#      - name: trigger remote chart repository
+#        run: |
+#          curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" \
+#          -H "Accept: application/vnd.github.everest-preview+json" \
+#          -H "Content-Type: application/json" \
+#          https://api.github.com/repos/YOURNAME/APPLICATION_NAME/actions/workflows/build.yaml/dispatches \
+#          --data '{"ref": "master"}'
