--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -86,6 +86,11 @@ jobs:
           cp {.helmignore,Chart.yaml,LICENSE,README.md,values.yaml} ${{ env.GITHUB_REPOSITORY_NAME_PART }}
 
       - name: pull-request-repo
+#        uses: vsoch/pull-request-action@master
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          BRANCH_PREFIX: "update/"
+#          PULL_REQUEST_BRANCH: "master"
         uses: paygoc6/action-pull-request-another-repo@v1.0.1
         env:
           API_TOKEN_GITHUB: ${{ secrets.DLAVRUSHKO_PERSONAL_ACCESS_TOKEN }}
@@ -97,7 +102,7 @@ jobs:
           destination_head_branch: ${{ env.GITHUB_EVENT_REF_SLUG }}
           user_email: 'denis.lavrushko@iits-consulting.de'
           user_name: 'dlavrushk0'
-          pull_request_reviewers: 'reviewers'
+          pull_request_reviewers: 'dlavrushk0'
 
 ############ leave this for main chart repo #############
 #      - uses: actions/setup-python@v2
