--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -102,7 +102,7 @@ jobs:
           destination_repo: 'iits-consulting/helm-charts'
           destination_folder: 'charts'
           destination_base_branch: ${{ env.GITHUB_EVENT_REF_SLUG }}
-          destination_head_branch: ${{ env.GITHUB_EVENT_REF_SLUG }}
+          destination_head_branch: master
           user_email: 'denis.lavrushko@iits-consulting.de'
           user_name: 'dlavrushk0'
           pull_request_reviewers: 'dlavrushk0'
