--- a/.github/workflows/enforce-pr-labels.yml
+++ b/.github/workflows/enforce-pr-labels.yml
@@ -7,6 +7,7 @@ jobs:
   enforce-label:
     runs-on: ubuntu-latest
     steps:
+      - name: Labels check
       - uses: yogevbd/enforce-label-action@2.1.0
         with:
           REQUIRED_LABELS_ANY: "major,minor,patch"
