--- a/.github/workflows/enforce-pr-labels.yml
+++ b/.github/workflows/enforce-pr-labels.yml
@@ -5,10 +5,11 @@ on:
     types: [labeled, unlabeled, opened, edited, synchronize]
 jobs:
   enforce-label:
+    name: Labels check
     runs-on: ubuntu-latest
     steps:
-      - name: Labels check
-      - uses: yogevbd/enforce-label-action@2.1.0
+      - name: Looking for any (major, minor or patch) label
+        uses: yogevbd/enforce-label-action@2.1.0
         with:
           REQUIRED_LABELS_ANY: "major,minor,patch"
           REQUIRED_LABELS_ANY_DESCRIPTION: "Select at least one label ['major','minor','patch']"
