--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -32,7 +32,7 @@ jobs:
         id: previoustag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         with:
-          fallback: 0.0.1
+          fallback: xx0.0.1
 
       - name: show current tag
         run: echo ${{ steps.previoustag.outputs.tag }}
