starting with versioning

--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -35,7 +35,7 @@ jobs:
           fallback: 1.0.0
 
       - name: show new tag
-        run: echo ${{ steps.previoustag.outputs.tag }}-${{ env.GITHUB_EVENT_REF_SLUG }}-${{ env.GITHUB_SHA_SHORT }}
+        run: echo ${{ steps.previoustag.outputs.tag }}+${{ env.GITHUB_EVENT_REF_SLUG }}+${{ env.GITHUB_SHA_SHORT }}
 #
 #      - name: Bump version and push tag
 #        uses: ChloePlanet/github-tag-action@master
