starting with versioning

--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -40,7 +40,7 @@ jobs:
       - name: change chart version
         uses: helm/chart-releaser-action@v1.2.0
         with:
-          charts_dir: ../../
+          charts_dir: ./
           version: ${{ steps.previoustag.outputs.tag }}+${{ env.GITHUB_EVENT_REF_SLUG }}+${{ env.GITHUB_SHA_SHORT }}
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
