starting with versioning

--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -37,13 +37,12 @@ jobs:
       - name: show new tag
         run: echo ${{ steps.previoustag.outputs.tag }}+${{ env.GITHUB_EVENT_REF_SLUG }}+${{ env.GITHUB_SHA_SHORT }}
 
-      - name: change chart version
-        uses: helm/chart-releaser-action@v1.2.0
+      - name: Find and Replace
+        uses: jacobtomlinson/gha-find-replace@master
         with:
-          charts_dir: ./
-          version: ${{ steps.previoustag.outputs.tag }}+${{ env.GITHUB_EVENT_REF_SLUG }}+${{ env.GITHUB_SHA_SHORT }}
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          find: "^version: *"
+          replace: ${{ steps.previoustag.outputs.tag }}+${{ env.GITHUB_EVENT_REF_SLUG }}+${{ env.GITHUB_SHA_SHORT }}
+          include: Chart.yaml
 
 #      - name: update chart.yml
 #        run: "sed -i 's/"^version: 0.0.1"/new-text/g' input.txt"
