starting with versioning

--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: get new tag
         run: |
-          ct=$(cat Chart.yaml | grep -oP '(?<=version: )\d+\.\d+\.\d+\.')
+          ct=$(cat Chart.yaml | tr -d " " | grep -oP '(?<=version:)\d+\.\d+\.\d+')
           echo $ct
           nt=$(echo $ct | sed "s/(?<=version: ).*/\+${{ env.GITHUB_SHA_SHORT }}/")
           echo $nt | perl -ne 's/"(?<=version: ).*"/"test"/g; print;'
