starting with versioning

--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -38,8 +38,8 @@ jobs:
         run: |
           ct=$(cat Chart.yaml | tr -d " " | grep -oP '(?<=version:)\d+\.\d+\.\d+')
           echo $ct
-          nt=$(echo $ct | sed "s/(?<=version: ).*/\+${{ env.GITHUB_SHA_SHORT }}/")
-          echo $nt | perl -ne 's/"(?<=version: ).*"/"test"/g; print;'
+          nt=$(echo "$ct+${{ env.GITHUB_SHA_SHORT }}")
+          echo $nt
 
 #      - name: Find and Replace
 #        uses: jacobtomlinson/gha-find-replace@master
