starting with versioning

--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -37,7 +37,12 @@ jobs:
       - name: get new tag
         run: |
           ct=$(cat Chart.yaml | tr -d " " | grep -oP '(?<=version:)\d+\.\d+\.\d+')
-          echo $ct
+          if [[ -z $ct ]]
+          then
+            echo "ERROR: Check your chart version! It should have SemVer numbers \
+            and be processed by regexp: '(?<=version:)\d+\.\d+\.\d+'"
+            exit
+          fi
           nt=$(echo "$ct+${{ env.GITHUB_SHA_SHORT }}")
           echo $nt
 
