--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -39,8 +39,8 @@ jobs:
           ct=$(cat Chart.yaml | tr -d " " | grep -oP '(?<=version:)\d+\.\d+\.\d+')
           if [[ -n $ct ]]
           then
-            echo "ERROR: Check your chart version in Chart.yaml file!!!
-            echo 'It should have SemVer numbers and be processed by '(?<=version:)\d+\.\d+\.\d+' regexp'
+            echo "ERROR: Check your chart version in Chart.yaml file!!!"
+            echo "It should have SemVer numbers and be processed by '(?<=version:)\d+\.\d+\.\d+' regexp"
             exit
           fi
           nt=$(echo "$ct+${{ env.GITHUB_SHA_SHORT }}")
