--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -9,6 +9,8 @@ jobs:
   lint-test:
     name: Linting
     runs-on: ubuntu-latest
+    outputs:
+      newTag: ${{ steps.nt.outputs.nt }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -35,23 +37,27 @@ jobs:
           fallback: 1.0.0
 
       - name: get new tag
+        id: newTagStep
         run: |
           ct=$(cat Chart.yaml | tr -d " " | grep -oP '(?<=version:)\d+\.\d+\.\d+')
-          if [[ -n $ct ]]
+          if [[ -z $ct ]]
           then
             echo "ERROR: Check your chart version in Chart.yaml file!!!"
             echo "It should have SemVer numbers and be processed by '(?<=version:)\d+\.\d+\.\d+' regexp"
             exit 1
           fi
           nt=$(echo "$ct+${{ env.GITHUB_SHA_SHORT }}")
-          echo $nt
+          echo "::set-output name=nt::$ct+${{ env.GITHUB_SHA_SHORT }}"
 
-#      - name: Find and Replace
-#        uses: jacobtomlinson/gha-find-replace@master
-#        with:
-#          find: "version:.*|version:.*${{steps.previoustag.outputs.tag }}"
-#          replace: "version: ${{ steps.previoustag.outputs.tag }}+${{ env.GITHUB_SHA_SHORT }}"
-#          include: Chart.yaml
+      - name: Find and Replace
+        uses: jacobtomlinson/gha-find-replace@master
+        with:
+          find: "version:.*"
+          replace: ${{needs.lint-test.outputs.newTag}}
+          include: Chart.yaml
+
+      - name: check Chart.yaml
+        run: cat Chart.yaml
 #
 #      - name: Commit and push changes
 #        uses: EndBug/add-and-commit@v7
