--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: get previous tag
         id: previoustag
-        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+        uses: WyriHaximus/github-action-get-previous-tag@v1
         with:
           fallback: 1.0.0
 
@@ -53,7 +53,7 @@ jobs:
         uses: jacobtomlinson/gha-find-replace@master
         with:
           find: "version:.*"
-          replace: ${{needs.lint-test.outputs.newTag}}
+          replace: "version: $nt"
           include: Chart.yaml
 
       - name: check Chart.yaml
